--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.19.2",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.4.1",
     "navigo": "^8.11.1",
     "yargs-parser": ">=13.1.2"
   }
